# eu-climate-policy-agentic-rag

./: .gitignore  README.md  pyproject.toml
climate_policy_docs/: COM_2023_796_EU_wide_assessment_draft_updated_NECPs.md  EU_2040_climate_target_press_release.md  SWD_2023_932_1_EN.md  com_2025_524_en.md  delivering-on-the-clean-industrial-deal-i.md  eu-climate-law-2040-questions-and-answers.md  eu-climate-law-2040-target-staff-working-document-swd-2025-524.md  eu-climate-law-amended-proposal-com-2020-563.md  eu-climate-law-new-way-reach-2040-targets-2025-07-02.md  eu-climate-law-new-way-reach-2040-targets-2025-07-02_en.md  eu-climate-law-new-way-to-reach-2040-targets-2025-07-02.md  eu-climate-law-regulation-eu-2021-1119.md  eu-lex-regulation-2026-667-en.md  eu-regulation-2026-667-oj-en.md  eu-regulation-2026-667.md  eur-lex-regulation-2026-667-en.md  factsheet_ctp_en.md
data/: eu_climate_policy.json
docs/: data.md  notebooks.md  package-structure.md  pipeline.md  tdd-improvement-plan.md  tests.md  tool-framework-plan.md  tool-framework-tdd.md  tools.md
notebooks/: 01.1-scraper.ipynb  02-rag.ipynb
src/eu_climate_policy_rag/: __init__.py
src/eu_climate_policy_rag/collection/: __init__.py  content_hashing.py  document_discovery.py  document_metadata.py  document_quality.py  document_urls.py  fetch_agent.py  fetch_pipeline_steps.py  ingestion.py  pipeline.py  url_utils.py
src/eu_climate_policy_rag/collection/cleaning/: __init__.py  cleaning_agent.py  cleaning_toolbox.py  cleaning_tools.py  markdown_cleaning.py  rag_dataset_ingestion.py
src/eu_climate_policy_rag/collection/discovery/: __init__.py  candidate_discovery.py  candidate_utils.py  document_link_scraper.py
src/eu_climate_policy_rag/collection/fetching/: __init__.py  browser_content_capture.py  content_cache.py  fetch_agent.py  fetch_logging.py  fetch_toolbox.py  (+6 more)
src/eu_climate_policy_rag/core/: __init__.py  agent.py  agent_loop.py  logging_utils.py  metrics.py  models.py  tooling.py  types.py
src/eu_climate_policy_rag/qa/: __init__.py  rag.py  tools.py
tests/: conftest.py  test_compatibility_imports.py  test_document_discovery.py  test_document_metadata.py  test_fetch_agent_preselection.py  test_ingestion.py  test_logging_utils.py  test_models.py  test_pipeline.py  test_rag.py  test_url_utils.py
tests/helpers/: responses_replay.py
tests/integration/: test_candidate_discovery.py  test_cleaning_agent.py  test_cleaning_toolbox.py  test_document_discovery.py  test_fetch_agent.py  test_fetching_content.py  test_fetching_toolbox.py  test_pipeline.py  test_rag.py  test_rag_dataset_ingestion.py  test_rag_web_search.py
tests/unit/: test_agent_loop.py  test_candidate_utils.py  test_compatibility_imports.py  test_document_quality.py  test_logging_utils.py  test_markdown_cleaning.py  test_models.py  test_openai_responses_adapter.py  test_rag_validation.py  test_response_metrics.py  test_tool_executor.py  test_tool_framework.py  test_tool_middleware.py  test_tooling.py  test_urls.py
(+13 files in other folders)
