[project]
name = "eu-climate-policy-agentic-rag"
version = "0.1.0"
description = "Agentic RAG assistant for EU climate policy documents: retrieves and synthesizes answers from official sources, with web search fallback"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "jupyter>=1.0.0",
    "markitdown[all]>=0.1.5",
    "minsearch>=0.0.5",
    "openai>=1.50.0",
    "playwright>=1.59.0",
    "pydantic>=2.12.0",
    "python-dotenv>=1.0.0",
    "requests>=2.33.1",
    "typer>=0.12.0",
]

[project.scripts]
eu-climate-ingest = "eu_climate_policy_rag.collection.ingestion:main"
eu-climate-pipeline = "eu_climate_policy_rag.collection.pipeline:main"
eu-climate-ask = "eu_climate_policy_rag.qa.rag:app"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "coverage>=7.13.5",
    "pytest>=8.0.0",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_classes = ["*Tests"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"
